修改标题栏按钮链接

--- a/Application/Home/View/Public/menu.html
+++ b/Application/Home/View/Public/menu.html
@@ -2,7 +2,7 @@
   <header data-am-widget="header" style="background-color:#19a7f0"
           class="am-header am-header-default am-header-fixed">
       <div class="am-header-left am-header-nav">
-          <a href="__APP__/Home/Index/index" class="">
+          <a href="__APP__/Home/User/index" class="">
 
                 <i class="am-header-icon am-icon-user"></i>
           </a>
