--- a/Application/Home/View/Chart/chart.html
+++ b/Application/Home/View/Chart/chart.html
@@ -1,4 +1,15 @@
-
+<!-- <extend name="Chart:chart"/>
+<extend name="Public:common"/>
+<block name="main">
+    <body style="text-align:center;">
+      <div id="container_Year" style="height:320px"></div>
+      <hr>
+      <div id="container_InClass" style="height:320px"></div>
+      <hr>
+      <div id="container_OutClass" style="height:320px"></div>
+      <hr>
+    </body>
+</block> -->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <script type="text/javascript" src="http://libs.useso.com/js/jquery/1.8.3/jquery.min.js"></script>
