--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -25,6 +25,9 @@
             
           </fieldset>
         </form>
+        <div class="am-text-center am-text-secondary">
+          <a href="__APP__/Home/Login/regist">注册账号</a>
+        </div>
     </div>
 
 
