注册账号界面增加返回登陆页面按键

--- a/Application/Home/View/Login/regist.html
+++ b/Application/Home/View/Login/regist.html
@@ -35,6 +35,8 @@
             </div>
             
             <p><input type="submit" class="am-btn am-btn-success am-btn-block" name="regist_submit" value="注册"></p>
+
+            <p><a class="am-btn am-btn-block am-btn-default" href="__APP__/Home/Login/index">返回</a></p>
             
           </fieldset>
         </form>
