--- a/Application/Home/View/Class/index.html
+++ b/Application/Home/View/Class/index.html
@@ -33,7 +33,7 @@
                     <div class="am-input-group">
                         <span class="am-input-group-label"><b>类别</b></span>
                         <select id="select-type" class="am-form-field" name="class_type" >
-                            <if condition="$ClassType eq '收入'">
+                            <if condition="$ClassType eq 'in'">
                                 <option value="1">收入</option>
                                 <option value="2">支出</option>
                             <else/>
