增加登陆页面的注册入口

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -25,9 +25,14 @@
             
           </fieldset>
         </form>
-        <div class="am-text-center am-text-secondary">
-          <a href="__APP__/Home/Login/regist">注册账号</a>
-        </div>
+    </div>
+
+    <div style="position:fixed; bottom:1rem; width:100%;">
+      <div class="am-text-center am-text-secondary am-text-sm">
+        <a href="__APP__/Home/Login/regist">注册账号</a>
+        &nbsp;|&nbsp;
+        <a href="#" data-am-modal="{target: '#my-popup'}">关于我们</a>
+      </div>
     </div>
 
 
