完善注册页面

--- a/Application/Home/View/Login/regist.html
+++ b/Application/Home/View/Login/regist.html
@@ -22,9 +22,9 @@
 
             <div class="am-form-group">
               <label for="regist_password">密码</label>
-              <input type="password" class="" name="regist_password" placeholder="输入密码（建议6位以上）" 
+              <input type="password" class="" name="regist_password" placeholder="输入密码（必须6位以上）" 
                 minlength="4" maxlength="24" id="doc-vld-pwd-1" 
-                data-validation-message="密码长度要求在4-24位之间。" required/>
+                data-validation-message="密码长度要求在6-24位之间。" required/>
             </div>
         
             <div class="am-form-group">
@@ -36,7 +36,7 @@
             
             <p><input type="submit" class="am-btn am-btn-success am-btn-block" name="regist_submit" value="注册"></p>
 
-            <p><a class="am-btn am-btn-block am-btn-default" href="__APP__/Home/Login/index">返回</a></p>
+            <p><a class="am-btn am-btn-block am-btn-default" href="__APP__/Home/Login/index">返回登录</a></p>
             
           </fieldset>
         </form>
