--- a/Application/Home/View/User/index.html
+++ b/Application/Home/View/User/index.html
@@ -105,5 +105,6 @@
             </div>
         </div>
     </div>
+    <div class="am-text-center am-text-xs"><a href="http://qxu1192050221.my3w.com/xxjzApp/index.php">跳转到内测版</a></div>
 </block>
 
