--- a/Application/Home/View/Login/regist.html
+++ b/Application/Home/View/Login/regist.html
@@ -34,9 +34,9 @@
                 data-validation-message="请与上面输入的密码保持一致" required/>
             </div>
             
-            <p><input type="submit" class="am-btn am-btn-success am-btn-block" name="regist_submit" value="注册"></p>
+            <p><input type="submit" class="am-btn am-btn-success am-btn-block am-radius" name="regist_submit" value="注册"></p>
 
-            <p><a class="am-btn am-btn-block am-btn-default" href="__APP__/Home/Login/index">返回登录</a></p>
+            <p><a class="am-btn am-btn-block am-btn-default am-radius" href="__APP__/Home/Login/index">返回登录</a></p>
             
           </fieldset>
         </form>
