--- a/Application/Home/View/Chart/index.html
+++ b/Application/Home/View/Chart/index.html
@@ -37,7 +37,7 @@
                 top: 'top',
                 x: 'center'
             },
-            color: ['#90ee7e','#ff0066','#f7a35c','7cb5ec'],  //蓝色：3398DB 红色：c23531 青色：61a0a8 橙色：d48265 绿色：91c7ae
+            color: ['#90ee7e','#ff0066','#f7a35c','#7cb5ec'],  //蓝色：3398DB 红色：c23531 青色：61a0a8 橙色：d48265 绿色：91c7ae
             tooltip : {
                 trigger: 'axis',
                 extraCssText: 'text-align: left;',
