完善记账页表格更多按钮

--- a/Application/Home/View/Add/index.html
+++ b/Application/Home/View/Add/index.html
@@ -95,5 +95,7 @@
         </div>
     </div>
     <include file="Public:list_common"/>
-    <a href="__APP__/Home/Index/index/p/2" class="am-btn am-btn-block am-btn-default">更多</a>
+    <gt name="PageMax" value="1">
+        <a href="__APP__/Home/Index/index/p/2" class="am-btn am-btn-block am-btn-default">更多</a>
+    </gt>
 </block>
