调整设置页面

--- a/Application/Home/View/User/index.html
+++ b/Application/Home/View/User/index.html
@@ -7,15 +7,15 @@
             <if condition="$type eq 1">
                 <li class=""><a href="[data-tab-panel-0]">账号设置</a></li>
                 <li class="am-active"><a href="[data-tab-panel-1]">修改密码</a></li>
-                <li class=""><a href="[data-tab-panel-2]">其他设置</a></li>
+                <!-- <li class=""><a href="[data-tab-panel-2]">其他设置</a></li> -->
             <elseif condition="$type eq 2"/>
                 <li class=""><a href="[data-tab-panel-0]">账号设置</a></li>
                 <li class=""><a href="[data-tab-panel-1]">修改密码</a></li>
-                <li class="am-active"><a href="[data-tab-panel-2]">其他设置</a></li>
+                <!-- <li class="am-active"><a href="[data-tab-panel-2]">其他设置</a></li> -->
             <else/>
                 <li class="am-active"><a href="[data-tab-panel-0]">账号设置</a></li>
                 <li class=""><a href="[data-tab-panel-1]">修改密码</a></li>
-                <li class=""><a href="[data-tab-panel-2]">其他设置</a></li>
+                <!-- <li class=""><a href="[data-tab-panel-2]">其他设置</a></li> -->
             </if>
         </ul>
         <div class="am-tabs-bd">
@@ -77,7 +77,7 @@
             </div>
 
             <!-- 其他设置 -->
-            <if condition="$type eq 2">
+            <!-- <if condition="$type eq 2">
                 <div data-tab-panel-2 class="am-tab-panel am-active">
             <else/>
                 <div data-tab-panel-2 class="am-tab-panel">
@@ -102,7 +102,7 @@
                     <p><input type="submit" class="am-btn am-btn-secondary am-btn-block" name="user_submit" value="提交"></p>
                     <p><a href="__APP__/Home/Index/index" class="am-btn am-btn-block am-btn-default">返回</a></p>
                 </form>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="am-text-center am-text-xs"><a href="http://qxu1192050221.my3w.com/xxjzApp/index.php">跳转到内测版</a></div>
