新增客户端下载地址Config

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -82,12 +82,12 @@
         <legend>小歆记账AUI</legend>
 
           <!-- <img class="am-img-responsive" src="http://s.amazeui.org/media/i/demos/bing-1.jpg" alt=""/> -->
-          <a class="am-btn am-btn-success am-btn-block am-radius" href="http://downloadpkg.apicloud.com/app/download?path=http://7xwwr4.com1.z0.glb.clouddn.com/88f3bec4fa503a1613c54b289e631a72.ipa">
+          <a class="am-btn am-btn-success am-btn-block am-radius" href="{$app_ios_url}">
             <i class="am-icon-apple"></i>&nbsp;苹果
           </a>
 
           <!-- <img class="am-img-responsive" src="http://s.amazeui.org/media/i/demos/bing-1.jpg" alt=""/> -->
-          <a class="am-btn am-btn-success am-btn-block am-radius" href="http://downloadpkg.apicloud.com/app/download?path=http://7xwwr4.com1.z0.glb.clouddn.com/3098417b93ab48948b11249e07f17dc6_d">
+          <a class="am-btn am-btn-success am-btn-block am-radius" href="{$app_android_url}">
             <i class="am-icon-android"></i>&nbsp;安卓
           </a>
           
