增加自定义配置内容

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,7 +3,7 @@
     
     <div class="am-alert am-alert-secondary" data-am-alert>
         <button type="button" class="am-close">&times;</button>
-        <p><b>{$UserName}，欢迎使用小歆记账APP！&nbsp;</b><a href="/index.php" class="am-btn-sm am-btn-warning">返回旧版</a></p>
+        <p><b>{$UserName}，{$Think.config.XXJZ_WELCOME}&nbsp;</b><a href="/index.php" class="am-btn-sm am-btn-warning">返回旧版</a></p>
     </div>
     
     <include file="Public:list_index"/>
