--- a/Application/Home/View/Public/base.html
+++ b/Application/Home/View/Public/base.html
@@ -2,7 +2,7 @@
   <header data-am-widget="header" style="background-color:#19a7f0"
           class="am-header am-header-default am-header-fixed">
       <h1 data-am-widget="gotop" class="am-header-title">
-          <a href="__APP__/Home/Login/logout" class="">小歆记账</a>
+          <a href="__APP__/Home/Login/logout" class="">{$Think.config.XXJZ_TITLE}</a>
       </h1>
   </header>
 <block name="main">
