--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="{$Think.config.XXJZ_DESCRIPTION}">
+  <meta name="keywords" content="{$Think.config.XXJZ_KEYWORDS}">
   <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   
-  <title>小歆记账App</title>
+  <title>{$Think.config.XXJZ_TITLE}</title>
   
   <!--<script src="__PUBLIC__/Home/js/pace.min.js"></script>-->
   <!--<link rel="stylesheet" href="__PUBLIC__/Home/css/pace/pace-theme-center-circle.css"/>-->
@@ -31,7 +31,7 @@
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="小歆记账"/>
+  <meta name="apple-mobile-web-app-title" content="{$Think.config.XXJZ_TITLE}"/>
   <link rel="apple-touch-icon-precomposed" href="__PUBLIC__/Home/i/app-icon72x72@2x.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -40,7 +40,7 @@
 
   <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
   <!--
-  <link rel="canonical" href="http://www.xxgzs.org/">
+  <link rel="canonical" href="https://jz.xxgzs.org/">
   -->
   
   <link rel="stylesheet" href="__PUBLIC__/Home/css/amazeui.min.css">
@@ -53,6 +53,6 @@
 
 <body>
 <!--[if lte IE 9]>
-<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，小歆记账App暂不支持。 请升级浏览器以获得更好的体验！</p>
+<p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，{$Think.config.XXJZ_TITLE}暂不支持。 请升级浏览器以获得更好的体验！</p>
 <![endif]-->
 
