--- a/Application/Home/View/Public/menu.html
+++ b/Application/Home/View/Public/menu.html
@@ -10,7 +10,7 @@
 
       <h1 data-am-widget="gotop" class="am-header-title">
           <a href="#top" class="">
-            小歆记账
+            {$Think.config.XXJZ_TITLE}
           </a>
       </h1>
       
@@ -29,25 +29,5 @@
             <li class=""><a href="__APP__/Home/Login/logout" class="am-icon-sign-out"> &nbsp;退出登录</a></li>
         </ul>
       </div>
-    </div>
-    
-    <!--<nav data-am-widget="menu" class="am-menu  am-menu-offcanvas1" data-am-menu-offcanvas> -->
-    <!--    <a href="javascript: void(0)" class="am-menu-toggle">-->
-    <!--        <i class="am-menu-toggle-icon am-icon-bars"></i>-->
-    <!--    </a>-->
-    <!--    <div class="am-offcanvas" >-->
-    <!--        <div class="am-offcanvas-bar am-offcanvas-bar-flip">-->
-    <!--            <ul class="am-menu-nav am-avg-sm-1">-->
-    <!--                <li><a href="__APP__/Home/Class/index" class="" >分类管理</a></li>-->
-    <!--            </ul>-->
-    <!--            <ul class="am-menu-nav am-avg-sm-1">-->
-    <!--                <li><a href="" class="" >设置选项</a></li>-->
-    <!--            </ul>-->
-    <!--            <ul class="am-menu-nav am-avg-sm-1">-->
-    <!--                <li><a href="__APP__/Home/Login/logout" class="" >退出登录</a></li>-->
-    <!--            </ul>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <!--</nav>-->
-    
+    </div>    
   </header>
