删除冗余代码

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -33,7 +33,7 @@
       <div class="am-text-center am-text-secondary am-text-sm">
         <a href="__APP__/Home/Login/regist">注册账号</a>
         &nbsp;|&nbsp;
-        <a href="#" data-am-modal="{target: '#my-popup-xxjzWeChat'}">小程序</a>
+        <a href="#" data-am-modal="{target: '#my-xxjz'}">小程序</a>
         <span class="am-badge am-badge-danger am-round">Hot</span>
         &nbsp;|&nbsp;
         <a href="#" data-am-modal="{target: '#my-popup'}">关于我们</a>
@@ -102,14 +102,6 @@
         <hr />
       </fieldset>
 
-    </div>
-  </div>
-</div>
-
-<div class="am-modal am-modal-no-btn" tabindex="-1" id="my-popup-xxjzWeChat">
-  <div class="am-modal-dialog">
-    <div class="am-modal-bd">
-      <img src="http://ol8zhns69.bkt.clouddn.com/xxjzWeChat.png?imageView2/2/w/172/h/172/interlace/1/q/100" alt="小歆记账 for 微信小程序"/>
     </div>
   </div>
 </div>
