修正Https资源的URL

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -85,7 +85,7 @@
       <fieldset>
         <legend>微信小程序</legend>
         <figure data-am-widget="figure" class="am am-figure am-figure-default "   data-am-figure="{  pureview: 'false' }">
-          <img src="http://ol8zhns69.bkt.clouddn.com/xxjzWeChat.png?imageView2/2/w/172/h/172/interlace/1/q/100" data-rel="http://ol8zhns69.bkt.clouddn.com/xxjzWeChatW.png" alt="小歆记账 for 微信小程序"/>
+          <img src="//image.jz.xxgzs.org/xxjzWeChat.png?imageView2/2/w/172/h/172/interlace/1/q/100" data-rel="//image.jz.xxgzs.org/xxjzWeChatW.png" alt="小歆记账 for 微信小程序"/>
         </figure>
         <div class="am-text-center">使用微信扫描此二维码，即可使用小歆记账。</div>
         <hr />
