增加资金账户入口

--- a/Application/Home/View/Public/menu.html
+++ b/Application/Home/View/Public/menu.html
@@ -22,6 +22,8 @@
         <ul class="am-dropdown-content">
             <li class=""><a href="__APP__/Home/Chart/index" class="am-icon-pie-chart" > &nbsp;年度统计</a></li>
             <li class="am-divider"></li>
+            <li class=""><a href="__APP__/Home/Funds/index" class="am-icon-credit-card"> &nbsp;资金账户</a></li>
+            <li class="am-divider"></li>            
             <li class=""><a href="__APP__/Home/Class/index" class="am-icon-list-ul"> &nbsp;分类管理</a></li>
             <li class="am-divider"></li>
             <li class=""><a href="__APP__/Home/User/index" class="am-icon-cog" > &nbsp;设置选项</a></li>
