增加新建资金账户功能

--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -5,9 +5,9 @@
             <legend>新建资金账户</legend>
             <div class="am-input-group">
                 <span class="am-input-group-label"><b>名称</b></span>
-                <input type="text" class="am-form-field" id="text-class" name="class_name" placeholder="输入资金账户名称">
+                <input type="text" class="am-form-field" id="text-funds" name="funds_name" placeholder="输入资金账户名称">
             </div>
-            <p><input type="submit" class="am-btn am-btn-secondary am-btn-block" name="class_submit" value="新建"></p>
+            <p><input type="submit" class="am-btn am-btn-secondary am-btn-block" name="funds_submit" value="新建"></p>
         </fieldset>
     </form>
 
