--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -20,30 +20,29 @@
                     <th width='80' bgcolor="#FFFFFF">资金账户</th>
                     <th width='80' bgcolor="#FFFFFF">收入金额</th>
                     <th width='80' bgcolor="#FFFFFF">支出金额</th>
+                    <th width='80' bgcolor="#FFFFFF">剩余金额</th>
                     <th width='80' bgcolor="#FFFFFF">记录数</th>
                     <th width='80' bgcolor="#FFFFFF">操作</th>
                 </tr>
             </thead>
             <tbody class="">
-                <tr>
-                    <td class="am-text-middle">默认</td>
-                    <td class="am-text-middle">{$default.inmoney}</td>
-                    <td class="am-text-middle">{$default.outmoney}</td>
-                    <td class="am-text-middle">{$default.count}</td>
-                    <td class="am-text-middle"><a href="">编辑</a> <a href="">删除</a></td>
-                </tr>
                 <volist name="ShowData" id="data">
                 <tr>
-                    <td class="am-text-middle">{$data.funds}</td>
-                    <td class="am-text-middle">{$data.inmoney}</td>
-                    <td class="am-text-middle">{$data.outmoney}</td>
-                    <td class="am-text-middle">{$data.count}</td>
+                    <td class="am-text-middle">{$data.name}</td>
+                    <td class="am-text-middle">{$data.money.in}</td>
+                    <td class="am-text-middle">{$data.money.out}</td>
+                    <td class="am-text-middle">{$data.money.over}</td>
+                    <td class="am-text-middle">{$data.money.count}</td>
                     <td class="am-text-middle">
-                        <php>
-                            echo "<a href=".U("Home/Edit/index?id=".$data['id']).">编辑</a>";
-                            echo " ";
-                            echo "<a href=\"javascript:void(0);\" onclick=\"isDelete('__APP__/Home/Edit/del/id/".$data['id']."')\" >删除</a>";
-                        </php>
+                        <if condition="$data.id eq 0 ">
+                            <a href="javascript:void(0);" onclick="alert('默认资金账户无法编辑。');">编辑</a> <a href="javascript:void(0);" onclick="alert('默认资金账户无法删除。');">删除</a> 
+                        <else />
+                            <php>
+                                echo "<a href=".U("Home/Funds/edit?id=".$data['id']).">编辑</a>";
+                                echo " ";
+                                echo "<a href=\"javascript:void(0);\" onclick=\"isDelete('__APP__/Home/Funds/del/id/".$data['id']."')\" >删除</a>";
+                            </php>
+                        </if>
                     </td>
                 </tr>
                 </volist>
